@@ -19,18 +19,8 @@
 #ifndef MAX7219LED8X8S_H
 #define MAX7219LED8X8S_H
 
-// ----------------------------------------------------------------------------
-
-#include <stdint.h>
-
-// ----------------------------------------------------------------------------
-
-void max7219s_init(void);
-void max7219s_start(void);
-void max7219s_buffer_out(void);
-
-void max7219s_buffer_set(uint8_t x, uint8_t y);
-void max7219s_buffer_clr(uint8_t x, uint8_t y);
+// NOTE: NO LONGER USED AND NEEDED
+// TODO: REMOVE THIS
 
 // ============================================================================
 
